--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "com.nullkal.unisense",
+  "name": "com.creatornet.unisense",
   "displayName": "Input System-UniSense",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "unity": "2019.1",
   "description": "This plugin enables Unity apps to use DualSense in Windows OS, the controller for PlayStation 5.",
   "keywords": [
@@ -16,10 +16,10 @@
     "com.unity.inputsystem": "1.0.1"
   },
   "license": "MIT",
-  "homepage": "https://github.com/nullkal/UniSense#readme",
+  "homepage": "https://github.com/creatornet/UniSense#readme",
   "repository": {
     "type": "git",
-    "url": "https://github.com/nullkal/UniSense.git"
+    "url": "https://github.com/creatornet/UniSense.git"
   },
   "author": {
     "name": "nullkal",
